--- a/about_me.html
+++ b/about_me.html
@@ -5,22 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Page</title>
 </head>
-<body>
-    <header>
+<body style="background-color: #d9ead3; color: #333333; font-family: Arial, sans-serif;">
+    <header style="background-color: #2e8540; color: #ffffff; padding: 20px; text-align: center;">
         <h1>Virentina Rahel's Personal Page</h1>
         <nav>
-                <a href="index.html">Home</a>
-                <a href="about_me.html">About Me</a>
-                <a href="blog.html">Blog</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="contact.html">Contact</a>           
+            <ul style="list-style-type: none; padding: 0;">
+                <li style="display: inline; margin-right: 20px;"><a href="index.html" style="color: #ffffff; text-decoration: none;">Home</a></li>
+                <li style="display: inline; margin-right: 20px;"><a href="about_me.html" style="color: #ffffff; text-decoration: none;">About Me</a></li>
+                <li style="display: inline; margin-right: 20px;"><a href="blog.html" style="color: #ffffff; text-decoration: none;">Blog</a></li>
+                <li style="display: inline; margin-right: 20px;"><a href="gallery.html" style="color: #ffffff; text-decoration: none;">Gallery</a></li>
+                <li style="display: inline;"><a href="contact.html" style="color: #ffffff; text-decoration: none;">Contact</a></li>
+            </ul>
         </nav>
     </header>
-    <main>
-        <div>
-            <section>
+    <main style="padding: 20px;">
+        <div style="margin-bottom: 20px;">
+            <img src="img/IMG_8422.JPG" alt="Profile Picture" style="width: 300px; height: auto; border-radius: 10%; float: right; margin-right: 80px; margin-top: 50px;">
+            <section style="background-color: #a2d4ab; padding: 20px; border-radius: 10px;">
                 <h2>About Me</h2>
-                <img src="img/IMG_8422.JPG" alt="Profile Picture" width="150" height="auto">
                 <p>Hey world! I'm a world explorer on a mission to uncover wonders around every corner. U can call me viren.</p>
                 <p>i'm a dedicated coffee enthusiast and quite the expert at brewing the perfect cup. When I'm not out chasing</p>
                 <p>or concocting coffee magic, you might catch me lounging on the couch with my favorite book or chasing after</p>
@@ -30,7 +32,7 @@
                 <p>bright colors into this world with my never-ending smile and unwavering enthusiasm.</p>
             </section>
         </div>
-        <section>
+        <section style="background-color: #82bda6; padding: 20px; border-radius: 10px; margin-bottom: 20px;">
             <h2>My Hobbies</h2>
             <ul>
                 <li>Listening Music</li>
@@ -39,7 +41,7 @@
             </ul>
         </section>
     </main>
-    <footer>
+    <footer style="background-color: #2e8540; color: #ffffff; padding: 20px; text-align: center;">
         <p>&copy; 2024 Virentina Rahel Paat. All rights reserved.</p>
     </footer>
 </body>
